# datagen

./: .env.example  .gitignore  ADOPTION_ANALYSIS_EXECUTIVE_BRIEF.txt  ANALYSIS_QUERIES.md  ANALYSIS_QUERIES.sql  ANALYSIS_REPORT_DATA_QUALITY_ECOMM.md  ANALYSIS_REPORT_ECOMM.md  ANALYSIS_REPORT_ECOMM_WITH_TREND.md  ANALYSIS_REPORT_SEGMENTS_DATA_QUALITY.md  ANALYSIS_REPORT_SEGMENTS_GROWTH.md  ANALYSIS_REPORT_SIMPLE.md  ANALYSIS_SUMMARY.txt  ARCHITECTURE_3_SYSTEMS.md  BLIND_ANALYSIS_FINDINGS.md  BLIND_ANALYSIS_FINDINGS_FEATURE1.md  BLIND_ANALYSIS_METHODOLOGY.md  CLAUDE.md  COHORT_RETENTION_REPORT.md  COMPREHENSIVE_BLIND_TEST_SUMMARY.md  COMPREHENSIVE_VALIDATION_COMPLETE.md  DATAGEN_FEATURE_REQUESTS.md  DEVELOPMENT_STATUS_REPORT.md  DOMAIN_AGNOSTIC_TESTING.md  DuckDB_SQL_Queries_Reference.sql  EFFECT_MODIFIER_STATUS.md  ENV_FILE_GUIDE.md  EXAMPLE_CONVERSATION.md  EXAMPLE_VALIDATION_REPORT.md  EXPORT_GUIDE.md  EXPORT_SUMMARY.md  FEATURE3_VALIDATION.md  FEATURE4_VALIDATION_20251110_074600.md  FEATURE4_VALIDATION_20251110_075024.md  FINAL_STATUS.md  GOAL.md  HOW_TO_TRY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_GAPS.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_ROADMAP.md  (+53 more)
example/: bank.json  ecomm.json  gov.json  gov_scaled.json  schema.json  test_patterns.json  valid_schema.json
examples/: comprehensive_saas_analytics.json  ecommerce_conversion_funnel.json  growth_marketing_campaigns.json  gym_membership_lifecycle.json  healthcare_appointments_vintage.json  healthcare_patient_journey.json  iot_device_states.json  llm_generated_ecommerce.json  marketing_attribution.json  (+8 more)
(+141 files in other folders)
